[tool.ruff]
line-length = 200

[tool.pytest.ini_options]
pythonpath = ". src"
log_cli = true
log_cli_level = "INFO"

[tool.poetry]
name = "fhirproxy"
version = "0.1.0"
description = ""
authors = ["Andy Stevens <andrew.stevens@gtri.gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.98.0"
"fhir.resources" = "7.0.0"
fhirpathpy = "0.2.1"
httpx = "0.24.1"
pyjwt = {version = "2.6.0", extras = ["crypto"]}
hypercorn = "0.14.3"
fhirsearchhelper = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-dotenv = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
