[tool.ruff]
line-length = 200

[tool.pytest.ini_options]
pythonpath = ". src"
log_cli = true
log_cli_level = "INFO"

[tool.poetry]
name = "fhirproxy"
version = "0.1.0"
description = ""
authors = ["Andy Stevens <andrew.stevens@gtri.gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.116.1"
fastapi-utils = {version="0.8.0", extras = ["all"]}
fhirsearchhelper = "^0.4.0"
httpx = "0.28.1"
hypercorn = "0.17.3"
pyjwt = {version = "2.10.1", extras = ["crypto"]}

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-dotenv = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
